--- a/_notebooks/2020-07-04-Evaluation-methods-for-unsupervised-word-embeddings.ipynb
+++ b/_notebooks/2020-07-04-Evaluation-methods-for-unsupervised-word-embeddings.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Evaluation methods for unsupervised word embeddings\n",
-    ">\n",
+    "> Evaluation methods for unsupervised word embeddings review\n",
+    "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
