--- a/_notebooks/2020-07-03-Text-Preprocessing.ipynb
+++ b/_notebooks/2020-07-03-Text-Preprocessing.ipynb
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://miro.medium.com/max/3220/1*ffMYw8aujrmyxfA55Zm3Jg.jpeg)"
+    "![tokenization](https://miro.medium.com/max/3220/1*ffMYw8aujrmyxfA55Zm3Jg.jpeg)"
    ]
   },
   {
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![](https://miro.medium.com/max/3492/1*JpOXoNSFkZ0sjqPYT2U4cA.jpeg)"
+    "![Stemming](https://miro.medium.com/max/3492/1*JpOXoNSFkZ0sjqPYT2U4cA.jpeg)"
    ]
   },
   {
