--- a/_notebooks/2020-07-04-Evaluation-methods-for-unsupervised-word-embeddings.ipynb
+++ b/_notebooks/2020-07-04-Evaluation-methods-for-unsupervised-word-embeddings.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "评价结果如下,可以看出，绝大多数任务中，CBOW表现最好。但是个别任务里，其他词向量更好\n",
     "\n",
-    "![Embedding1](./images/Embedding1.png)"
+    "![Embedding1](images/Embedding1.png)"
    ]
   },
   {
@@ -100,7 +100,7 @@
     "\n",
     "结果如下,同样可以看出，没有一种词向量是在所有任务中都表现最好的\n",
     "\n",
-    "![Embedding2](./images/Embedding2.png)"
+    "![Embedding2](images/Embedding2.png)"
    ]
   },
   {
@@ -111,7 +111,7 @@
     "\n",
     "结果如下,可以看出不同词向量的生成方法，对于不同词频的单词，所得到的结果是不同的\n",
     "\n",
-    "![Embedding3](./images/Embedding3.png)"
+    "![Embedding3](images/Embedding3.png)"
    ]
   },
   {
@@ -132,7 +132,7 @@
     "\n",
     "结果如下，对于下游任务，同样的，没有一种词向量可以在所有下游任务中都表现最好，所以对于不同下游任务，我们应该尝试不同词向量的表示\n",
     "\n",
-    "![Embedding4](./images/Embedding4.png)"
+    "![Embedding4](images/Embedding4.png)"
    ]
   },
   {
@@ -152,7 +152,7 @@
     "\n",
     "结果如下,可以看出，我们可以通过词向量来较好的预测单词的词频，其中GloVe和CCA中包含了较多的词频信息。另外单词的词频于其在语料库里的词频排名也有很强的相关性\n",
     "\n",
-    "![Embedding5](./images/Embedding5.png)"
+    "![Embedding5](images/Embedding5.png)"
    ]
   },
   {
