--- a/_notebooks/2020-08-07-Sentiment-Analysis-System.ipynb
+++ b/_notebooks/2020-08-07-Sentiment-Analysis-System.ipynb
@@ -251,30 +251,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "在文本数据的预处理方面，常用的还有count vectorizer和word embedding， count vectorizer的效果比起tfidf略微差了一点，word embedding对结果会有所提高。另外，在情感分析模型的构建中，还可以有很多其他的方法，例如目前最流行的Bert。或者也可以利用LSTM来构建模型。在这方面，如果有兴趣可以参考https://www.kaggle.com/poonaml/bidirectional-lstm-spacy-on-yelp-reviews。 结果会比baseline有很大的提升。不过如果想要尝试这类深度学习的方法，必须先准备好GPU。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "对于Aspect的抽取，Segment的抽取。本文的方法比较基础，这是考虑了最基础的情况。这些方面的抽取也可以考虑通过训练模型来实现。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "## 4. 结果"
+    "## 3. 结果"
    ]
   },
   {
@@ -292,60 +273,67 @@
     "hidden": true
    },
    "source": [
+    "```\n",
     "========= sample result for business_id jRfQX8enRhWHf7V5zP5U8g =========\n",
     "\n",
     "Business Name:  The Gelato Spot\n",
-    "\n",
     "Overall Rating:  4.058315334773218\n",
     "\n",
     "Aspects1 :gelato, rating:3.7201255688450567, \n",
-    "\n",
     "pos_sample: ['This review is only with respect to their gelato', \"We haven't yet ventured beyond gelato but will make it our next stop when we're in the mood for pizza\", 'The gelato LOOKS delicious from the get-go', 'The guy behind the gelato counter was very helpful and friendly', 'I saw a decent amount of customer flow and the employees were constantly making gelato in the back'], \n",
-    "\n",
     "neg_sample: [\"Worst gelato I've had\", 'The girls serving gelato had horrible attitudes and kept pushing me off to each other (they openly said they did not want to wait on me and told each other to just have \n",
     "me wait and to help someone else)', 'their gelato was nothing special']\n",
     "\n",
     "Aspects2 :pizza, rating:3.6547648329047857, \n",
-    "\n",
     "pos_sample: [\"We haven't yet ventured beyond gelato but will make it our next stop when we're in the mood for pizza\", \"one of these days I'll try the pizza place as well and I'm sure it won't disappoint\", 'Vegetarian Friendly Entree: Honey Basil Pizza\\nDelicious pizza with the sweet and savory combination', 'One pizza is a perfect serving for one person', \"I'm the type of \n",
     "person that can never choose the type of pizza I want\"], \n",
-    "\n",
     "neg_sample: ['Showed up Saturday night to order a pizza and was told I could order but had to take it to go since they were closing in 30 minutes', 'Was told it took 15 minutes for the pizza to be ready', 'Worst pizza I have ever had', 'Lean cuisine pizzas have more flavor', \"the margherite pizza was the worst I've had\"]\n",
     "\n",
     "Aspects3 :place, rating:3.671313509696845, \n",
-    "\n",
     "pos_sample: ['The place is very clean and nicely decorated', 'This place is great', 'The place is conveniently located in a corner location within a pizzeria', 'The location is clean and the place is quaint and comfortable', 'I frequent this place more often than I care to admit but with free samples and a great variety of different gelato flavors how could I not? Some common reasons why you might find me in Gelato Spot:\\n\\n- Holiday\\n- Bad Day\\n- Good Day\\n- Normal Day\\n- Sunday'], neg_sample: ['I decided to order pick up using the Eat2 services for lunch since my work place is walking distance from the restaurant', 'After helping them I told her I was there to pick up an order i placed using the Yelp app', 'I showed her the charge from my bank account and she placed the order to the cooks', 'I had to rush back to my work place since I only have a 30min lunch']\n",
     "\n",
     "Aspects4 :flavors, rating:3.6733356958870567, \n",
-    "\n",
     "pos_sample: ['Great flavors and good quality', 'Their flavors are all delicious', 'and they are great at suggesting new flavors', 'and they have so many flavors to choose from', \"We haven't been disappointed in any flavors that we've tried:  tiramisu\"], \n",
-    "\n",
     "neg_sample: []\n",
     "\n",
     "Aspects5 :spot, rating:3.6346406123098576, \n",
-    "\n",
     "pos_sample: ['I was pleasantly surprised with this spot', 'It hit the spot', 'I am so happy that we found this spot and if I ever come back', 'This review is for Wood Fired pizza which is connected to the gelato spot', 'The G spot has it all'], \n",
-    "\n",
-    "neg_sample: ['My daughter read about their cakes on their website so when I asked her where I should get her birthday cake she told me that Gelato spot had cakes with buttercream frosting(her favorite)']\n"
+    "neg_sample: ['My daughter read about their cakes on their website so when I asked her where I should get her birthday cake she told me that Gelato spot had cakes with buttercream frosting(her favorite)']\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "## 4. 其他尝试"
+    "## 4. 其他尝试和反思"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "搭建一个情感分析系统需要牵扯到很多方面，任何一个环节都需要注意。如果有一个环节出错，都会影响到整个系统的表现。例如Aspect的抽取，Segment的抽取，或者是模型的构建。"
+    "在文本数据的预处理方面，常用的还有count vectorizer和word embedding， count vectorizer的效果比起tfidf略微差了一点，word embedding对结果会有所提高。另外，在情感分析模型的构建中，还可以有很多其他的方法，例如目前最流行的Bert。或者也可以利用LSTM来构建模型。在这方面，如果有兴趣可以参考https://www.kaggle.com/poonaml/bidirectional-lstm-spacy-on-yelp-reviews。 结果会比baseline有很大的提升。不过如果想要尝试这类深度学习的方法，必须先准备好GPU。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "搭建一个情感分析系统需要牵扯到很多方面，任何一个环节都需要注意。如果有一个环节出错，都会影响到整个系统的表现。例如Aspect的抽取，Segment的抽取，或者是模型的构建。对于Aspect的抽取，Segment的抽取。本文的方法比较基础，这是考虑了最基础的情况。这些方面的抽取也可以考虑通过训练模型来实现。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "{{ '[文本情感分析](https://zh.wikipedia.org/wiki/%E6%96%87%E6%9C%AC%E6%83%85%E6%84%9F%E5%88%86%E6%9E%90)' | fndetail: 1 }}\n",
     "{{ '[Bidirectional LSTM, SpaCy on Yelp Reviews](https://www.kaggle.com/poonaml/bidirectional-lstm-spacy-on-yelp-reviews)' | fndetail: 2 }}\n",
