--- a/_notebooks/2020-08-09-Bert.ipynb
+++ b/_notebooks/2020-08-09-Bert.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![bert1](images/bert1.PNG)"
+    "![bert1](images/Bert1.PNG)"
    ]
   },
   {
