--- a/_notebooks/2020-08-09-Bert.ipynb
+++ b/_notebooks/2020-08-09-Bert.ipynb
@@ -197,7 +197,7 @@
    },
    "source": [
     "BERT横扫了多少NLP的下游任务版单，在这里我们就不一一列举了。下表列出了BERT在GLUE这个Benchmark上的表现，可以看出它对当时的SOTA有很大的提升。另外在SQuAD, SWAG等任务或者数据集上，BERT也是轻松刷新了最好成绩。\n",
-    "![](images/Bert_table1.PNG)"
+    "![](images/Bert_Table1.PNG)"
    ]
   },
   {
