--- a/_notebooks/2020-08-09-Bert.ipynb
+++ b/_notebooks/2020-08-09-Bert.ipynb
@@ -8,7 +8,7 @@
     "> Bert: 2018 google\n",
     "\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
     "- author: Bujie Xu\n",
     "- categories: [NLP]"
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在很多NLP的任务中，使用预训练模型对结果都有很大的提高。例如，在NLP任务中使用预训练的词向量，能够很好的提高模型精度。但是传统的词向量表征存在一个致命的问题，就是他们无法有效的表达一词多义的情况。随后ELMo, GPT, BERT相继得到提出，他们都可以很好的解决一词多义的问题。Elmo用两层LSTM独立的训练了从左到右和从右到左的语言表示，最终得到下游任务的特征表示，对不同任务，他需要训练不同的特征表示。GPT使用了Transformer从左到右对语料进行训练。BERT采用了双向Transformer encoder对语料进行了训练。BERT和GPT都可以直接用于下游任务，并通过fine-tune微调网络参数。"
+    "在很多NLP的任务中，使用预训练模型对结果都有很大的提高。例如，在NLP任务中使用预训练的词向量，能够很好的提高模型精度。但是传统的词向量表征存在一个致命的问题，就是他们无法有效的表达一词多义的情况。随后ELMo, GPT, BERT相继得到提出，他们都可以很好的解决一词多义的问题。Elmo用两层LSTM独立的训练了从左到右和从右到左的语言表示，最终得到下游任务的特征表示，对不同任务，他需要训练不同的特征表示。GPT使用了Transformer从左到右对语料进行训练。BERT采用了双向Transformer对语料进行了训练。BERT和GPT都可以直接用于下游任务，并通过fine-tune微调网络参数。"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "如上图所示，BERT是由多层的双向Transformer encoder构成。在结构上，他相较于GPT的创新就是引入了双向模型。另外，BERT还引入了Masked Language Model(MLM)和Next Sentence Prediction(NSP)两个任务来做模型的训练。以下分别对他们进行介绍。"
+    "如上图所示，BERT是由多层的双向Transformer构成。在结构上，他相较于GPT的创新就是引入了双向Transformer。另外，BERT还引入了Masked Language Model(MLM)和Next Sentence Prediction(NSP)两个任务来做模型的训练。以下分别对他们进行介绍。"
    ]
   },
   {
@@ -99,10 +99,10 @@
     "\n",
     "下面给出了这个任务的一个例子。\n",
     "\n",
-    "```\n",
+    "`\n",
     "Input: the man went to the [MASK1] . he bought a [MASK2] of milk.\n",
     "Labels: [MASK1] = store; [MASK2] = gallon\n",
-    "```"
+    "`"
    ]
   },
   {
@@ -123,22 +123,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
+    "`\n",
     "Sentence A: the man went to the store .\n",
     "Sentence B: he bought a gallon of milk .\n",
     "Label: IsNextSentence\n",
-    "```"
+    "`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```\n",
+    "`\n",
     "Sentence A: the man went to the store .\n",
     "Sentence B: penguins are flightless .\n",
     "Label: NotNextSentence\n",
-    "```"
+    "`"
    ]
   },
   {
@@ -224,13 +224,6 @@
     "{{ '[Attention Is All You Need](https://arxiv.org/abs/1706.03762)' | fndetail: 2 }}\n",
     "{{ '[BERT](https://github.com/google-research/bert)' | fndetail: 3 }}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
