--- a/_notebooks/2020-08-09-Bert.ipynb
+++ b/_notebooks/2020-08-09-Bert.ipynb
@@ -5,10 +5,9 @@
    "metadata": {},
    "source": [
     "# Bert: Pre-training of Deep Bidirectional Transformers for Language Understanding \n",
-    "> Bert: 2018 google\n",
+    "> Understanding bert\n",
     "\n",
     "- toc: true \n",
-    "- badges: false\n",
     "- comments: true\n",
     "- author: Bujie Xu\n",
     "- categories: [NLP]"
@@ -69,28 +68,37 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## 3. Bert的结构和任务"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "如上图所示，BERT是由多层的双向Transformer构成。在结构上，他相较于GPT的创新就是引入了双向Transformer。另外，BERT还引入了Masked Language Model(MLM)和Next Sentence Prediction(NSP)两个任务来做模型的训练。以下分别对他们进行介绍。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
-    "### Masked LM"
+    "#### Masked LM"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "为了使用双向Transformer，Bert里设计了一种mask机制，就是对输入进行mask操作，然后预测被mask的词。具体的mask操作如下,对于选中的单词\n",
     "- 80%的概率置换成[MASK]\n",
@@ -107,21 +115,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
-    "### Next Sentence Prediction"
+    "#### Next Sentence Prediction"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "在很多NLP的任务里，理解句子间的关系很重要。比如说QA任务，或者是NLI任务。所以，在BERT中作者设计了NSP这个任务，这个任务其实很简单，就是去判断一句话是否跟另一句话相连。下面给出了两个例子。"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "```\n",
     "Sentence A: the man went to the store .\n",
@@ -136,7 +151,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "通过研究表明，NSP这个任务对于QA任务或者是NLI任务都有很大的帮助。"
    ]
