--- a/_notebooks/2020-08-09-Bert.ipynb
+++ b/_notebooks/2020-08-09-Bert.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bert: Pre-training of Deep Bidirectional Transformers for Language Understanding \n",
+    "# Bert Pre-training of Deep Bidirectional Transformers for Language Understanding \n",
     "> Understanding bert\n",
     "\n",
     "- toc: true \n",
