change badge to false

--- a/_notebooks/2020-06-11-From-Word-Embeddings-To-Document-Distances.ipynb
+++ b/_notebooks/2020-06-11-From-Word-Embeddings-To-Document-Distances.ipynb
@@ -8,7 +8,7 @@
     "> 《From Word Embeddings To Document Distances》 review\n",
     "\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
     "- author: Bujie Xu\n",
     "- categories: [NLP]"
