--- a/_notebooks/2020-07-03-Text-Preprocessing.ipynb
+++ b/_notebooks/2020-07-03-Text-Preprocessing.ipynb
@@ -7,7 +7,7 @@
     "# 文本预处理方法汇总\n",
     ">\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
     "- author: Bujie Xu\n",
     "- categories: [NLP]"
