--- a/_notebooks/2020-08-09-Bert.ipynb
+++ b/_notebooks/2020-08-09-Bert.ipynb
@@ -8,6 +8,7 @@
     "> Understanding bert\n",
     "\n",
     "- toc: true \n",
+    "- badges: false\n",
     "- comments: true\n",
     "- author: Bujie Xu\n",
     "- categories: [NLP]"
