--- a/_notebooks/2020-07-04-Evaluation-methods-for-unsupervised-word-embeddings.ipynb
+++ b/_notebooks/2020-07-04-Evaluation-methods-for-unsupervised-word-embeddings.ipynb
@@ -8,7 +8,7 @@
     "> Evaluation methods for unsupervised word embeddings review\n",
     "\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
     "- author: Bujie Xu\n",
     "- categories: [NLP]"
