--- a/_notebooks/2020-08-07-Sentiment-Analysis-System.ipynb
+++ b/_notebooks/2020-08-07-Sentiment-Analysis-System.ipynb
@@ -8,7 +8,7 @@
     "> 从0开始搭建情感分析系统\n",
     "\n",
     "- toc: true \n",
-    "- badges: true\n",
+    "- badges: false\n",
     "- comments: true\n",
     "- author: Bujie Xu\n",
     "- categories: [NLP]"
